--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </ul>
         </section>
     </main> 
-    <footer>
+    <footer class="footer">
         <a href="./index.html" class="logo">
             WebStudio
         </a>
