--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class=".activity">
             <h2>
                 What are we doing
             </h2>
@@ -159,7 +159,7 @@
             </ul>
         </section>
     </main> 
-    <footer>
+    <footer class="footer">
         <a href="./index.html" class="logo">
             WebStudio
         </a>
