--- a/portfolio.html
+++ b/portfolio.html
@@ -11,12 +11,12 @@
 <body>
     <header>
         <nav class="nav">
-            <a href="./index.html">
+            <a href="./index.html" class="logo">
                 WebStudio
             </a>
             <ul>
                 <li>
-                    <a href="./index.html" class="logo">
+                    <a href="./index.html">
                         Studio
                     </a>
                 </li>
@@ -81,7 +81,6 @@
         </ul>
         <ul class="portfolio-list">
             <li>
-                <a href="">
                     <img src="./images/bankapp.jpg" alt="Banking app Screen" width="360">
                     <H2>
                         Banking App Interface Concept
@@ -89,24 +88,17 @@
                     <p>
                         App
                     </p>
-                </a>
             </li>
             <li>
-                <a href="">
                     <img src="./images/markapp.jpg" alt="Cashless Payment" width="360">
                     <h2>
                         Cashless Payment
                     </h2>
-                    <p class="payment">
-                        14 Stylish and User-Friendly App Design<br> Concepts · Task Manager App · Calorie<br> Tracker App · Exotic Fruit Ecommerce<br> App · Cloud Storage App
-                    </p>
                     <p>
                         Marketing
-                    </p>
-                </a>    
+                    </p>  
             </li>
             <li>
-                <a href="">
                     <img src="./images/laptopimg.jpg" alt="Laptop with Phone" width="360">
                     <h2>
                         Meditaion App
@@ -114,10 +106,8 @@
                     <p>
                         App
                     </p>
-                </a>
             </li>
             <li>
-                <a href="">
                     <img src="./images/car.jpg" alt="Phone in car" width="360">
                     <h2>
                         Taxi Service
@@ -125,51 +115,51 @@
                     <p>
                         Marketing
                     </p>
-                </a>
             </li>
             <li>
-                <a href="">
                     <img src="./images/screen.jpg" alt="Phone screen" width="360">
                     <h2>
                         Screen Illustrations
                     </h2>
                     <p>
                         Design
-                    </p>
-                </a>    
+                    </p>    
             </li>
             <li>
-                <a href="">
                     <img src="./images/girl.jpg" alt="Girl in yellow glasses" width="360">
                     <h2>
                         Online Courses
                     </h2>
                     <p>
                         Marketing
-                    </p>
-                </a>    
+                    </p>    
             </li>
             <li>
-                <a href="">
                     <img src="./images/design.jpg" alt="Multiple pictures" width="360">
                     <h2>
                         Instagram Stories Concept
                     </h2>
                     <p>
                         Design
-                    </p>
-                </a>    
+                    </p>   
             </li>
             <li>
-                <a href="">
+                <img src="./images/food.jpg" alt="Woman with bag of food" width="360">
+                <h2>
+                    Organic Food
+                </h2>
+                <p>
+                    Web Site
+                </p>   
+        </li>
+            <li>
                     <img src="./images/cup.jpg" alt="Cup of coffee" width="360">
                     <h2>
                         Fresh Coffee
                     </h2>
                     <p>
                         Web Site
-                    </p>
-                </a>    
+                    </p>  
             </li>
         </ul>
     </main>
