--- a/index.html
+++ b/index.html
@@ -11,90 +11,97 @@
 <body>
     <header>
         <nav class="nav">
+            <!-- Logo -->
             <a href="./index.html" class="logo">
-                WebStudio
+                web<aside class="studio">studio</aside>
             </a>
             <ul>
                 <li>
-                    <a href="./index.html">
+                    <a href="./index.html" class="nav-link">
                         Studio
                     </a>
                 </li>
+                <!-- Navigation -->
                 <li>
-                    <a href="./portfolio.html">
+                    <a href="./portfolio.html" class="nav-link">
                         Portfolio
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="nav-link">
                         Contacts
                     </a>
                 </li>
             </ul>
         </nav>
-        <address class="adress">
+        <!-- Contacts -->
+        <address>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">
+                    <a href="mailto:info@devstudio.com" class="adress">
                         info@devstudio.com
                     </a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">
+                    <a href="tel:+110001111111" class="adress">
                         +11 (000) 111-11-11
                     </a>
                 </li>
             </ul>
         </address>    
     </header>
+    <!-- Main -->
     <main>
+        <!-- Hero -->
         <section class="hero">
             <h1>
-                Effective Solutionsfor Your Business
+                Effective Solutions <br>for Your Business
             </h1>
-            <button type="button">
+            <button type="button" class="button">
                 Order Service
             </button>
         </section>
+        <!-- Наші переваги -->
         <section class="advantages">
-            <h2>Our advantages</h2>
+            <h2 class="advantages-h2">Our advantages</h2>
             <ul>
                 <li>
-                    <h3>
+                    <h3 class="advantages-title">
                         Strategy
                     </h3>
-                    <p>
+                    <p class="advantages-text">
                         Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>
+                    <h3 class="advantages-title">
                         Punctuality
                     </h3>
-                    <p>
+                    <p class="advantages-text">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li>
-                    <H3>
+                    <H3 class="advantages-title">
                         Diligence
                     </H3>
-                    <p>
+                    <p class="advantages-text">
                         Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li>
-                    <h3>
+                    <h3 class="advantages-title">
                         Technologies
                     </h3>
-                    <p>
+                    <p class="advantages-text">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                 </li>
             </ul>
         </section>
+        <!-- Що ми робимо -->
         <section class=".activity">
-            <h2>
+            <h2 class="activity-title">
                 What are we doing
             </h2>
             <ul>
@@ -115,44 +122,45 @@
                 </li>
             </ul>
         </section>
+        <!-- Команда -->
         <section class="team">
-            <h2>
+            <h2 class="team-title">
                 Our Team
             </h2>
             <ul>
                 <li>
                     <img src="./images/prod.jpg" alt="Product Designer" width="264">
-                    <h3>
+                    <h3 class="team-member">
                         Mark Guerrero
                     </h3>
-                    <p>
+                    <p class="member-speciality">
                         Product Designer
                     </p>
                 </li>
                 <li>
                     <img src="./images/fend.jpg" alt="Frontend Developer" width="264">
-                    <h3>
+                    <h3 class="team-member">
                         Tom Ford
                     </h3>
-                    <p>
+                    <p class="member-speciality">
                         Frontend Developer
                     </p>
                 </li>
                 <li>
                     <img src="./images/mrk.jpg" alt="Marketing" width="264">
-                    <h3>
+                    <h3 class="team-member">
                         Camila Garcia
                     </h3>
-                    <p>
+                    <p class="member-speciality">
                         Marketing
                     </p>                 
                 </li>
                 <li>
                     <img src="./images/ui.jpg" alt="UI Designer" width="264">
-                    <h3>
+                    <h3 class="team-member">
                         Daniel Wilson
                     </h3>
-                    <p>
+                    <p class="member-speciality">
                         UI Designer
                     </p>
                 </li>
@@ -161,9 +169,9 @@
     </main> 
     <footer class="footer">
         <a href="./index.html" class="logo">
-            WebStudio
+            Web <aside class="footer-studio">Studio</aside>
         </a>
-        <p>
+        <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
