--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="nav">
             <!-- Logo -->
             <a href="./index.html" class="logo">
-                web<aside class="studio">studio</aside>
+                web<div class="studio">studio</div>
             </a>
             <ul>
                 <li>
