--- a/portfolio.html
+++ b/portfolio.html
@@ -85,33 +85,40 @@
         <!-- Наші роботи -->
         <ul class="portfolio-list">
             <li>
+                <a href="">
                     <img src="./images/bankapp.jpg" alt="Banking app Screen" width="360">
-                    <H2 class="portfolio-main">
+                    <h2 class="portfolio-title">
                         Banking App Interface Concept
-                    </H2>
+                    </h2>
                     <p class="portfolio-text">
                         App
                     </p>
+                </a>
             </li>
             <li>
+                <a href="">
                     <img src="./images/markapp.jpg" alt="Cashless Payment" width="360">
-                    <h2 class="portfolio-main">
+                    <h2 class="portfolio-title">
                         Cashless Payment
                     </h2>
                     <p class="portfolio-text">
                         Marketing
-                    </p>  
+                    </p>
+                </a>  
             </li>
             <li>
+                <a href="">
                     <img src="./images/laptopimg.jpg" alt="Laptop with Phone" width="360">
                     <h2 class="portfolio-title">
                         Meditaion App
                     </h2>
                     <p class="portfolio-text">
                         App
-                    </p>
+                    </p>                    
+                </a>
             </li>
             <li>
+                <a href="">
                     <img src="./images/car.jpg" alt="Phone in car" width="360">
                     <h2 class="portfolio-title">
                         Taxi Service
@@ -119,26 +126,32 @@
                     <p class="portfolio-text">
                         Marketing
                     </p>
+                </a>
             </li>
             <li>
+                <a href="">
                     <img src="./images/screen.jpg" alt="Phone screen" width="360">
                     <h2 class="portfolio-title">
                         Screen Illustrations
                     </h2>
                     <p class="portfolio-text">
                         Design
-                    </p>    
+                    </p>   
+                </a> 
             </li>
             <li>
+                <a href="">
                     <img src="./images/girl.jpg" alt="Girl in yellow glasses" width="360">
                     <h2 class="portfolio-title">
                         Online Courses
                     </h2>
                     <p class="portfolio-text">
                         Marketing
-                    </p>    
+                    </p>  
+                </a>  
             </li>
             <li>
+                <a href="">
                     <img src="./images/design.jpg" alt="Multiple pictures" width="360">
                     <h2 class="portfolio-title">
                         Instagram Stories Concept
@@ -146,17 +159,21 @@
                     <p class="portfolio-text">
                         Design
                     </p>   
+                </a>
             </li>
             <li>
-                <img src="./images/food.jpg" alt="Woman with bag of food" width="360">
-                <h2 class="portfolio-title">
-                    Organic Food
-                </h2>
-                <p class="portfolio-text">
-                    Web Site
-                </p>   
+                <a href="">
+                    <img src="./images/food.jpg" alt="Woman with bag of food" width="360">
+                    <h2 class="portfolio-title">
+                        Organic Food
+                    </h2>
+                    <p class="portfolio-text">
+                        Web Site
+                    </p>   
+                </a>
             </li>
             <li>
+                <a href="">
                     <img src="./images/cup.jpg" alt="Cup of coffee" width="360">
                     <h2 class="portfolio-title">
                         Fresh Coffee
@@ -164,6 +181,7 @@
                     <p class="portfolio-text">
                         Web Site
                     </p>  
+                </a>
             </li>
         </ul>
     </main>
